{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "47569df1-f82d-4617-82ed-8ec74ac7e9a0",
            "actions": [
                {
                    "name": "Hotbar1",
                    "type": "PassThrough",
                    "id": "28abf135-4abe-4e91-9814-b09d0368b01f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar2",
                    "type": "PassThrough",
                    "id": "97c5b483-ff64-4660-91be-8152e33afff6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar3",
                    "type": "PassThrough",
                    "id": "a9b364e5-ed74-4e9e-a770-fdd8cd0add6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar4",
                    "type": "PassThrough",
                    "id": "db165b47-90a7-44b9-9dd2-284e38632c48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar5",
                    "type": "PassThrough",
                    "id": "22fb8ca6-36b3-45e7-8108-56c4f03f528e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar6",
                    "type": "PassThrough",
                    "id": "b1482be0-158d-40bc-8e62-5d7ddbfd4275",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hotbar7",
                    "type": "PassThrough",
                    "id": "71da67c1-9a20-460e-9970-c32d2f2aefb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse Wheel",
                    "type": "PassThrough",
                    "id": "5db1e888-9477-4aa4-9b46-66fe5abaeb55",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "dfed4dac-0a55-4342-9dea-8517fb090bfb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Use Item",
                    "type": "Button",
                    "id": "c3bb3ef0-68d0-4c88-82c3-3c1f93a5bc2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "6e1485af-b034-4cf6-b05c-e90ff041e0c3",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "8b889bd1-24d5-45d9-b827-ce403a5fa268",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8447ba8a-dc60-4e6f-8791-9691237a963d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "cfee1e76-4d5e-4ea1-9881-798f1e1a52cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "055fb0ff-dbcd-4084-8fb8-ff3ecb96c95e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "397e0b42-69b9-4d6c-9faf-eb90f4e6642b",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e85ffb11-c614-4e05-b92e-03638e750ed5",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Wheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b28140b8-240b-4dbd-8b2a-71886a37af89",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b87944a5-551d-4ef8-8855-a7fef3568ebb",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4983fb53-7d5f-41dd-8f05-dca66128014d",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f12ce5c-8823-455b-a31e-f819a9d35384",
                    "path": "<Keyboard>/5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65969a24-b1d9-4233-b743-fe4dd102ff4a",
                    "path": "<Keyboard>/6",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "149a9870-4dc8-4f0a-9eaa-ddd103f7a7d5",
                    "path": "<Keyboard>/7",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Hotbar7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86fe0a41-3345-4ece-af1a-4818ce904e59",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Use Item",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "0213b131-5eaa-4e54-82b5-8e97919b2435",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7b706ce9-6acd-42cd-a58e-be7b427aaa12",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "62369d7f-cfeb-4dba-87d5-7449b8e2bda4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "87436b1f-f994-492f-a24c-a249ca4c9d31",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dbd768c0-02d2-45e0-b875-589b10ab9635",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "db006cf7-ab6f-4506-91f1-62dc9d9197ce",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "541dc4ac-3a52-4df4-98ac-759e12c38895",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5be784cb-8692-4424-81ff-d460e397fe62",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85d32af4-623a-4628-9652-a395d971570a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dac1315-608c-4703-b330-d290895b6c53",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}